--- a/TranspCD2022.ipynb
+++ b/TranspCD2022.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Objetivo**: Obter informações atualizadas sobre a(o)s deputada(o)s federais e suas respectivas despesas realizadas em 2022, por meio dos recursos públicos destinados à cota parlamentar - verba recebida para custear o exercício de suas funções.  \n",
+        "**Objetivo**: Obter informações atualizadas sobre a(o)s deputada(o)s federais e suas respectivas despesas realizadas em 2022, por meio dos recursos públicos destinados à cota parlamentar - verba recebida pela(o)s deputada(o)s para custear o exercício de suas funções.  \n",
         "\n",
         "**Fonte de dados**: <a href=\"https://dadosabertos.camara.leg.br/swagger/api.html\">Dados Abertos da Câmara dos Deputados</a>"
       ],
@@ -136,6 +136,7 @@
         "      listA += resp2.json()['dados']\n",
         "    except:\n",
         "      listA = listA\n",
+        "    time.sleep(0.5)\n",
         "  dic_dept_desp.update({nid: listA})\n",
         "  joblib.dump(dic_dept_desp[nid],f'drive/MyDrive/ObjetosPy/listdesp{nid}') # Salvamento parcial na pasta ObjetosPy criada previamente no Google Drive"
       ],
@@ -171,6 +172,21 @@
       "metadata": {
         "id": "D9hrjL1FSIIk"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Padronização dos e-mails dos deputados\n",
+        "for nid in list_id:\n",
+        "    for i, elem in enumerate(list_dept):\n",
+        "        if elem['email'] is None:\n",
+        "            list_dept[i]['email']=\"\""
+      ],
+      "metadata": {
+        "id": "VbVyg_2OO0fw"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -239,7 +255,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Exportação de dados dos deputados para arquivo JSON\n",
+        "# Exportação de dados selecionados dos deputados para arquivo JSON\n",
         "list_dept_mod = []\n",
         "for elem in list_dept:\n",
         "    list_dept_mod.append({\"id\": elem['id'], \"nome\": elem['nome'], \"email\": elem['email'],\\\n",
@@ -292,7 +308,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Exportação dos dados das despesas para arquivo JSON\n",
+        "# Exportação de dados selecionados das despesas para arquivo JSON\n",
         "list_dept_desp = []\n",
         "for chv in dic2_dept_desp.keys():\n",
         "    for elem in dic2_dept_desp[chv]:\n",
