--- a/TranspCD2022.ipynb
+++ b/TranspCD2022.ipynb
@@ -180,7 +180,7 @@
         "for nid in list_id:\n",
         "    for i, elem in enumerate(list_dept):\n",
         "        if elem['email'] is None:\n",
-        "            list_dept[i]['email']=\"\""
+        "            list_dept[i]['email']='indisponibilizado'"
       ],
       "metadata": {
         "id": "VbVyg_2OO0fw"
