--- a/TranspCD2022.ipynb
+++ b/TranspCD2022.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Objetivo**: Obter informações atualizadas sobre a(o)s deputada(o)s federais e suas respectivas despesas realizadas em 2022, por meio dos recursos públicos destinados à cota parlamentar - verba recebida para custear o exercício de suas funções.  \n",
+        "**Objetivo**: Obter informações atualizadas sobre a(o)s deputada(o)s federais e suas respectivas despesas realizadas em 2022, por meio dos recursos públicos destinados à cota parlamentar - verba recebida pela(o)s deputada(o)s para custear o exercício de suas funções.  \n",
         "\n",
         "**Fonte de dados**: <a href=\"https://dadosabertos.camara.leg.br/swagger/api.html\">Dados Abertos da Câmara dos Deputados</a>"
       ],
@@ -136,6 +136,7 @@
         "      listA += resp2.json()['dados']\n",
         "    except:\n",
         "      listA = listA\n",
+        "    time.sleep(0.5)\n",
         "  dic_dept_desp.update({nid: listA})\n",
         "  joblib.dump(dic_dept_desp[nid],f'drive/MyDrive/ObjetosPy/listdesp{nid}') # Salvamento parcial na pasta ObjetosPy criada previamente no Google Drive"
       ],
@@ -148,7 +149,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Carregar dados parciais/totais coletados das despesas\n",
+        "# Carga dos dados parciais/totais coletados das despesas\n",
         "dic_dept_desp = {}\n",
         "for nid in list_id:\n",
         "  try:\n",
@@ -171,6 +172,21 @@
       "metadata": {
         "id": "D9hrjL1FSIIk"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Padronização dos e-mails dos deputados\n",
+        "for nid in list_id:\n",
+        "    for i, elem in enumerate(list_dept):\n",
+        "        if elem['email'] is None:\n",
+        "            list_dept[i]['email']='indisponível'"
+      ],
+      "metadata": {
+        "id": "VbVyg_2OO0fw"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -215,7 +231,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Transformação dos dados\n",
+        "# Transformação dos dados - parte 1: explicitar mês das despesas\n",
         "dic_mes = {1:'Jan', 2:'Fev', 3:'Mar', 4:'Abr', 5:'Mai', 6:'Jun', 7:'Jul', 8:'Ago', 9:'Set', 10:'Out', 11:'Nov', 12:'Dez'}\n",
         "for nid in list_id:\n",
         "    for i, elem in enumerate(dic2_dept_desp[nid]):\n",
@@ -223,6 +239,35 @@
       ],
       "metadata": {
         "id": "2p-tig8oD8hK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Transformação dos dados - parte 2: agrupar e simplificar os tipos de despesas\n",
+        "for nid in list_id:\n",
+        "    for i, e in enumerate(dic2_dept_desp[str(nid)]):\n",
+        "        if e['tipoDespesa'] == 'AQUISIÇÃO DE TOKENS E CERTIFICADOS DIGITAIS':\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = 'TOKENS'\n",
+        "        elif e['tipoDespesa'] == 'ASSINATURA DE PUBLICAÇÕES':\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = 'PUBLICAÇÕES'\n",
+        "        elif e['tipoDespesa'] == 'FORNECIMENTO DE ALIMENTAÇÃO DO PARLAMENTAR':\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = 'ALIMENTAÇÃO'\n",
+        "        elif e['tipoDespesa'] == 'PARTICIPAÇÃO EM CURSO, PALESTRA OU EVENTO SIMILAR':\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = 'EVENTOS INSTRUCIONAIS'\n",
+        "        elif e['tipoDespesa'].startswith('LOCAÇÃO'):\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = 'LOCAÇÃO DE VEÍCULOS'\n",
+        "        elif e['tipoDespesa'].startswith('PASSAGE'):\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = 'VIAGENS'\n",
+        "        elif e['tipoDespesa'].startswith('SERVIÇO') or e['tipoDespesa'] == 'TELEFONIA':\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = 'SERVIÇOS'\n",
+        "        else:\n",
+        "            dic2_dept_desp[str(nid)][i]['tipoDespesa'] = e['tipoDespesa'].split()[0].replace(',','')"
+      ],
+      "metadata": {
+        "id": "RD655JbKeidR"
       },
       "execution_count": null,
       "outputs": []
@@ -239,7 +284,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Exportação de dados dos deputados para arquivo JSON\n",
+        "# Exportação de dados selecionados dos deputados para arquivo JSON\n",
         "list_dept_mod = []\n",
         "for elem in list_dept:\n",
         "    list_dept_mod.append({\"id\": elem['id'], \"nome\": elem['nome'], \"email\": elem['email'],\\\n",
@@ -292,7 +337,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Exportação dos dados das despesas para arquivo JSON\n",
+        "# Exportação de dados selecionados das despesas para arquivo JSON\n",
         "list_dept_desp = []\n",
         "for chv in dic2_dept_desp.keys():\n",
         "    for elem in dic2_dept_desp[chv]:\n",
