--- a/TranspCD.ipynb
+++ b/TranspCD.ipynb
@@ -150,7 +150,7 @@
       "source": [
         "# Requisições das despesas dos deputados em exercício no ano e no mês desejados\n",
         "%%time\n",
-        "for nid in list_id[140:141]: # Controla execução parcial\n",
+        "for nid in list_id: # Controla execução parcial\n",
         "  listA = []\n",
         "  for pg in range(1,100):\n",
         "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&mes=8&pagina={pg}&itens=100\")\n",
@@ -179,6 +179,7 @@
       "source": [
         "# Carga dos dados atualizados das despesas\n",
         "dic1_dept_desp = {}\n",
+        "list_id = joblib.load(f'drive/MyDrive/DataSetCD/listid')\n",
         "for nid in list_id:\n",
         "  try:\n",
         "    listA = joblib.load(f'drive/MyDrive/DataSetCD/listdesp{nid}')\n",
@@ -220,12 +221,14 @@
       },
       "outputs": [],
       "source": [
-        "# Limpeza dos dados atualizados\n",
+        "# Limpeza dos dados atualizados: remover caracteres indesejados e nomes de fornecedores redundantes\n",
         "for nid in list_id:\n",
         "    for i, elem in enumerate(dic1_dept_desp[nid]):\n",
         "        for char in \"'.\":\n",
         "            dic1_dept_desp[nid][i]['nomeFornecedor'] = elem['nomeFornecedor'].replace(char,\"\")\n",
-        "            dic1_dept_desp[nid][i]['tipoDespesa'] = elem['tipoDespesa'].replace(char,\"\")"
+        "            dic1_dept_desp[nid][i]['tipoDespesa'] = elem['tipoDespesa'].replace(char,\"\")\n",
+        "        if elem['nomeFornecedor'].startswith('Cia Aérea'):\n",
+        "            dic1_dept_desp[nid][i]['nomeFornecedor'] = elem['nomeFornecedor'].split('-')[1].strip()"
       ]
     },
     {
@@ -263,7 +266,7 @@
       },
       "outputs": [],
       "source": [
-        "# Transformação dos dados - parte 2: agrupar e simplificar os tipos de despesas\n",
+        "# Transformação dos dados - parte 2: agrupar e simplificar os tipos de despesas, com base nas informações de https://www2.camara.leg.br/comunicacao/assessoria-de-imprensa/guia-para-jornalistas/cota-parlamentar\n",
         "for nid in list_id:\n",
         "    for i, e in enumerate(dic2_dept_desp[nid]):\n",
         "        if e['tipoDespesa'] == 'AQUISIÇÃO DE TOKENS E CERTIFICADOS DIGITAIS':\n",
@@ -318,18 +321,29 @@
       },
       "outputs": [],
       "source": [
-        "# Upload do arquivo JSON dos deputados para o Google Drive\n",
+        "# Upload das informações do arquivo JSON dos deputados para o Google Drive\n",
         "file_metadata1 = {\n",
         "  'name': 'deputadosLEG57',\n",
         "  'mimeType': 'application/json'\n",
         "}\n",
         "media1 = MediaFileUpload('deputadosLEG57.json',\n",
         "                        mimetype='application/json',\n",
-        "                        resumable=True)\n",
+        "                        resumable=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Criação do arquivo JSON dos deputados no Google Drive\n",
         "created1 = drive_service.files().create(body=file_metadata1,\n",
         "                                       media_body=media1,\n",
         "                                       fields='id').execute()"
-      ]
+      ],
+      "metadata": {
+        "id": "rLo5Tr1gJ_Ka"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -339,8 +353,8 @@
       },
       "outputs": [],
       "source": [
-        "# Atualização dos dados dos deputados federais\n",
-        "fileId1 = created1.get('id')\n",
+        "# Atualização dos dados dos deputados federais, caso o arquivo JSON dos deputados tenha sido criado previamente\n",
+        "fileId1 = [file['id'] for file in drive_service.files().list().execute()['files'] if file['name']=='deputadosLEG57'][0]\n",
         "updated1 = drive_service.files().update(fileId=fileId1,\n",
         "                                        body=file_metadata1,\n",
         "                                        media_body=media1).execute()"
@@ -374,18 +388,29 @@
       },
       "outputs": [],
       "source": [
-        "# Upload do arquivo JSON das despesas para o Google Drive\n",
+        "# Upload das informações do arquivo JSON das despesas para o Google Drive\n",
         "file_metadata2 = {\n",
         "  'name': 'despesasLEG57',\n",
         "  'mimeType': 'application/json'\n",
         "}\n",
         "media2 = MediaFileUpload('despesasLEG57.json',\n",
         "                        mimetype='application/json',\n",
-        "                        resumable=True)\n",
+        "                        resumable=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Criação do arquivo JSON dos despesas no Google Drive\n",
         "created2 = drive_service.files().create(body=file_metadata2,\n",
         "                                       media_body=media2,\n",
         "                                       fields='id').execute()"
-      ]
+      ],
+      "metadata": {
+        "id": "lG6K9kFrKgza"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -395,8 +420,8 @@
       },
       "outputs": [],
       "source": [
-        "# Atualização dos dados das despesas realizadas\n",
-        "fileId2 = created2.get('id')\n",
+        "# Atualização dos dados das despesas realizadas, caso o arquivo JSON dos despesas tenha sido criado previamente\n",
+        "fileId2 = [file['id'] for file in drive_service.files().list().execute()['files'] if file['name']=='despesasLEG57'][0]\n",
         "updated2 = drive_service.files().update(fileId=fileId2,\n",
         "                                        body=file_metadata2,\n",
         "                                        media_body=media2).execute()"
