--- a/TranspCD.ipynb
+++ b/TranspCD.ipynb
@@ -116,7 +116,8 @@
         "%%time\n",
         "resp1 = requests.get(\"https://dadosabertos.camara.leg.br/api/v2/deputados?idLegislatura=57\")\n",
         "list_dept = resp1.json()['dados']\n",
-        "list_id = list({e['id'] for e in list_dept})\n",
+        "list_id = []\n",
+        "[list_id.append(x) for x in list({e['id'] for e in list_dept}) if x not in list_id] # Elimina eventuais repetições na lista de identificadores dos deputados\n",
         "joblib.dump(list_id,f'drive/MyDrive/DataSetCD/listid') # Salvamento da lista de identificadores dos deputados na pasta DataSetCD\n",
         "joblib.dump(list_dept,f'drive/MyDrive/DataSetCD/listdept') # Salvamento da lista de informações dos deputados na pasta DataSetCD\n",
         "print(f'Número atual de deputados ativos: {len(list_id)}')"
@@ -154,11 +155,14 @@
         "for nid in list_id: # Controla execução parcial das requisições\n",
         "  listA = []\n",
         "  for pg in range(1,100):\n",
-        "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&mes=11&pagina={pg}&itens=100\")\n",
+        "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&pagina={pg}&itens=100\")\n",
         "    try:\n",
+        "      list0 = listA.copy()\n",
         "      listA += resp2.json()['dados']\n",
+        "      if listA == list0:\n",
+        "        break\n",
         "    except:\n",
-        "      listA = listA\n",
+        "      pass\n",
         "    time.sleep(0.5)\n",
         "  try:\n",
         "    dic_dept_desp[nid] += listA\n",
@@ -208,10 +212,9 @@
       "source": [
         "# Padronização dos e-mails dos deputados\n",
         "list_dept = joblib.load(f'drive/MyDrive/DataSetCD/listdept') # Carga dos dados dos deputados previamente salvos\n",
-        "for nid in list_id:\n",
-        "    for i, elem in enumerate(list_dept):\n",
-        "        if elem['email'] is None:\n",
-        "            list_dept[i]['email'] = 'indisponível'"
+        "for i, elem in enumerate(list_dept):\n",
+        "    if elem['email'] is None:\n",
+        "        list_dept[i]['email'] = 'indisponível'"
       ]
     },
     {
@@ -229,7 +232,12 @@
         "            dic1_dept_desp[nid][i]['nomeFornecedor'] = elem['nomeFornecedor'].replace(char,\"\")\n",
         "            dic1_dept_desp[nid][i]['tipoDespesa'] = elem['tipoDespesa'].replace(char,\"\")\n",
         "        if elem['nomeFornecedor'].startswith('Cia Aérea'):\n",
-        "            dic1_dept_desp[nid][i]['nomeFornecedor'] = elem['nomeFornecedor'].split('-')[1].strip()"
+        "            dic1_dept_desp[nid][i]['nomeFornecedor'] = elem['nomeFornecedor'].split('-')[1].strip()\n",
+        "        j = i\n",
+        "        while j >= 0:\n",
+        "            if dic1_dept_desp[nid][j]['cnpjCpfFornecedor']==dic1_dept_desp[nid][i]['cnpjCpfFornecedor'] and dic1_dept_desp[nid][j]['nomeFornecedor']!=dic1_dept_desp[nid][i]['nomeFornecedor']:\n",
+        "                dic1_dept_desp[nid][i]['nomeFornecedor'] = dic1_dept_desp[nid][j]['nomeFornecedor']\n",
+        "            j -= 1"
       ]
     },
     {
