--- a/TranspCD.ipynb
+++ b/TranspCD.ipynb
@@ -150,12 +150,12 @@
       },
       "outputs": [],
       "source": [
-        "# Requisições das despesas dos deputados em exercício no ano e no mês desejados\n",
+        "# Requisições das despesas dos deputados em exercício no(s) ano(s) e/ou no(s) mês(es) desejado(s)\n",
         "%%time\n",
         "for nid in list_id: # Controla execução parcial das requisições\n",
         "  listA = []\n",
         "  for pg in range(1,100):\n",
-        "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&pagina={pg}&itens=100\")\n",
+        "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes=1&pagina={pg}&itens=100\")\n",
         "    try:\n",
         "      list0 = listA.copy()\n",
         "      listA += resp2.json()['dados']\n",
@@ -184,7 +184,7 @@
       "source": [
         "# Carga dos dados atualizados das despesas\n",
         "dic1_dept_desp = {}\n",
-        "#list_id = joblib.load(f'drive/MyDrive/DataSetCD/listid')\n",
+        "list_id = joblib.load(f'drive/MyDrive/DataSetCD/listid')\n",
         "for nid in list_id:\n",
         "  try:\n",
         "    listA = joblib.load(f'drive/MyDrive/DataSetCD/listdesp{nid}')\n",
@@ -225,7 +225,7 @@
       },
       "outputs": [],
       "source": [
-        "# Limpeza dos dados atualizados: remover caracteres indesejados e nomes de fornecedores redundantes*\n",
+        "# Limpeza dos dados atualizados: remover caracteres indesejados e nomes de fornecedores redundantes\n",
         "for nid in list_id:\n",
         "    for i, elem in enumerate(dic1_dept_desp[nid]):\n",
         "        for char in \"'.\":\n",
