--- a/TranspCD.ipynb
+++ b/TranspCD.ipynb
@@ -75,9 +75,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "J4MxELGHzAU1"
+        "id": "J4MxELGHzAU1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2156a987-338a-42ce-e88f-c868fbb67c99"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "# Montar drive para armazenar conteúdo\n",
         "drive.mount('/content/drive')"
@@ -108,9 +120,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bInZ2XSc9CXt"
+        "id": "bInZ2XSc9CXt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c1bd4b0-52dc-4b8e-df48-ca576a631558"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número atual de deputados ativos: 570\n",
+            "CPU times: user 98.4 ms, sys: 6.46 ms, total: 105 ms\n",
+            "Wall time: 2.02 s\n"
+          ]
+        }
+      ],
       "source": [
         "# Captura dos parlamentares em exercício atualmente - 57ª legislatura (2023-2027)\n",
         "%%time\n",
@@ -146,16 +172,31 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "H5aDObDuEZFK"
+        "id": "H5aDObDuEZFK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf5fd731-5257-4103-91ad-c498650b74ce"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 1min 44s, sys: 1.58 s, total: 1min 46s\n",
+            "Wall time: 16min 36s\n"
+          ]
+        }
+      ],
       "source": [
         "# Requisições das despesas dos deputados em exercício no(s) ano(s) e/ou no(s) mês(es) desejado(s)\n",
         "%%time\n",
         "for nid in list_id: # Controla execução parcial das requisições\n",
         "  listA = []\n",
         "  for pg in range(1,100):\n",
-        "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes=1&pagina={pg}&itens=100\")\n",
+        "    #resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&pagina={pg}&itens=100\")\n",
+        "    #resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes=1&pagina={pg}&itens=100\")\n",
+        "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes=2&pagina={pg}&itens=100\")\n",
         "    try:\n",
         "      list0 = listA.copy()\n",
         "      listA += resp2.json()['dados']\n",
