--- a/TranspCD.ipynb
+++ b/TranspCD.ipynb
@@ -43,6 +43,7 @@
         "import requests\n",
         "import joblib\n",
         "import os\n",
+        "from datetime import date\n",
         "from google.colab import drive\n",
         "from google.colab import auth\n",
         "from googleapiclient.discovery import build\n",
@@ -152,29 +153,28 @@
       "source": [
         "# Requisições das despesas dos deputados em exercício no(s) ano(s) e/ou no(s) mês(es) desejado(s)\n",
         "%%time\n",
-        "for nid in list_id: # Controla execução parcial das requisições\n",
-        "  listA = []\n",
-        "  for pg in range(1,100):\n",
-        "    #resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&pagina={pg}&itens=100\")\n",
-        "    #resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes=1&pagina={pg}&itens=100\")\n",
-        "    #resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes=2&pagina={pg}&itens=100\")\n",
-        "    resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes=3&pagina={pg}&itens=100\")\n",
+        "for i in range(1,date.today().month): # Define intervalo para requisições mensais\n",
+        "  for nid in list_id: # Controla execução parcial das requisições\n",
+        "    listA = []\n",
+        "    for pg in range(1,100):\n",
+        "      #resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&pagina={pg}&itens=100\")\n",
+        "      resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes={i}&pagina={pg}&itens=100\")\n",
+        "      try:\n",
+        "        list0 = listA.copy()\n",
+        "        listA += resp2.json()['dados']\n",
+        "        if listA == list0:\n",
+        "          break\n",
+        "      except:\n",
+        "        pass\n",
+        "      time.sleep(0.5)\n",
         "    try:\n",
-        "      list0 = listA.copy()\n",
-        "      listA += resp2.json()['dados']\n",
-        "      if listA == list0:\n",
-        "        break\n",
+        "      dic_dept_desp[nid] += listA\n",
+        "      listB = []\n",
+        "      [listB.append(x) for x in dic_dept_desp[nid] if x not in listB] # Elimina eventuais repetições na lista atualizada das despesas de cada deputado\n",
+        "      dic_dept_desp[nid] = listB\n",
         "    except:\n",
-        "      pass\n",
-        "    time.sleep(0.5)\n",
-        "  try:\n",
-        "    dic_dept_desp[nid] += listA\n",
-        "    listB = []\n",
-        "    [listB.append(x) for x in dic_dept_desp[nid] if x not in listB] # Elimina eventuais repetições na lista atualizada das despesas de cada deputado\n",
-        "    dic_dept_desp[nid] = listB\n",
-        "  except:\n",
-        "    dic_dept_desp.update({nid: listA})\n",
-        "  joblib.dump(dic_dept_desp[nid],f'drive/MyDrive/DataSetCD/listdesp{nid}') # Salvamento parcial das despesas na pasta DataSetCD"
+        "      dic_dept_desp.update({nid: listA})\n",
+        "    joblib.dump(dic_dept_desp[nid],f'drive/MyDrive/DataSetCD/listdesp{nid}') # Salvamento parcial das despesas na pasta DataSetCD"
       ]
     },
     {
