--- a/TranspCD.ipynb
+++ b/TranspCD.ipynb
@@ -153,12 +153,12 @@
       "source": [
         "# Requisições das despesas dos deputados em exercício no(s) ano(s) e/ou no(s) mês(es) desejado(s)\n",
         "%%time\n",
+        "dic_dept_desp = {}\n",
         "for i in range(1,date.today().month): # Define intervalo para requisições mensais\n",
         "  for nid in list_id: # Controla execução parcial das requisições\n",
         "    listA = []\n",
-        "    for pg in range(1,100):\n",
-        "      #resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2023&pagina={pg}&itens=100\")\n",
-        "      resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano=2024&mes={i}&pagina={pg}&itens=100\")\n",
+        "    for pg in range(1,100): # Define intervalo para requisições por página no ano corrente\n",
+        "      resp2 = requests.get(f\"https://dadosabertos.camara.leg.br/api/v2/deputados/{str(nid)}/despesas?idLegislatura=57&ano={date.today().year}&mes={i}&pagina={pg}&itens=100\")\n",
         "      try:\n",
         "        list0 = listA.copy()\n",
         "        listA += resp2.json()['dados']\n",
@@ -321,7 +321,7 @@
         "for elem in list_dept:\n",
         "    list_dept_mod.append({\"id\": elem['id'], \"nome\": elem['nome'], \"email\": elem['email'],\\\n",
         "                            \"partido\": elem['siglaPartido'], \"uf\": elem['siglaUf'], \"foto\": elem['urlFoto']})\n",
-        "with open('deputadosLEG57.json', 'w', encoding='utf8') as arq:\n",
+        "with open(f'deputadosLEG57_{date.today().year}.json', 'w', encoding='utf8') as arq:\n",
         "    json.dump(list_dept_mod, arq, ensure_ascii=False)"
       ]
     },
@@ -335,15 +335,15 @@
       "source": [
         "# Upload das informações do arquivo JSON dos deputados para o Google Drive\n",
         "file_metadata1 = {\n",
-        "  'name': 'deputadosLEG57',\n",
+        "  'name': f'deputadosLEG57_{date.today().year}',\n",
         "  'mimeType': 'application/json'\n",
         "}\n",
-        "media1 = MediaFileUpload('deputadosLEG57.json',\n",
+        "media1 = MediaFileUpload(f'deputadosLEG57_{date.today().year}.json',\n",
         "                        mimetype='application/json',\n",
         "                        resumable=True)\n",
         "file_list = drive_service.files().list().execute()['files']\n",
-        "if any(file['name'] == 'deputadosLEG57' for file in file_list):\n",
-        "  fileId1 = [file['id'] for file in file_list if file['name']=='deputadosLEG57'][0]\n",
+        "if any(file['name'] == f'deputadosLEG57_{date.today().year}' for file in file_list):\n",
+        "  fileId1 = [file['id'] for file in file_list if file['name']==f'deputadosLEG57_{date.today().year}'][0]\n",
         "  updated1 = drive_service.files().update(fileId=fileId1,\n",
         "                                        body=file_metadata1,\n",
         "                                        media_body=media1).execute()\n",
@@ -369,7 +369,7 @@
         "                                \"ano\": elem['ano'], \"mes\": elem['mes'], \"data\": elem['dataDocumento'],\\\n",
         "                                \"nomefornecedor\": elem['nomeFornecedor'], \"codfornecedor\": elem['cnpjCpfFornecedor'],\\\n",
         "                                \"valor\": elem['valorLiquido']})\n",
-        "with open('despesasLEG57.json', 'w', encoding='utf8') as arq:\n",
+        "with open(f'despesasLEG57_{date.today().year}.json', 'w', encoding='utf8') as arq:\n",
         "    json.dump(list_dept_desp, arq, ensure_ascii=False)"
       ]
     },
@@ -383,15 +383,15 @@
       "source": [
         "# Upload das informações do arquivo JSON das despesas para o Google Drive\n",
         "file_metadata2 = {\n",
-        "  'name': 'despesasLEG57',\n",
+        "  'name': f'despesasLEG57_{date.today().year}',\n",
         "  'mimeType': 'application/json'\n",
         "}\n",
-        "media2 = MediaFileUpload('despesasLEG57.json',\n",
+        "media2 = MediaFileUpload(f'despesasLEG57_{date.today().year}.json',\n",
         "                        mimetype='application/json',\n",
         "                        resumable=True)\n",
         "file_list = drive_service.files().list().execute()['files']\n",
-        "if any(file['name'] == 'despesasLEG57' for file in file_list):\n",
-        "  fileId2 = [file['id'] for file in file_list if file['name']=='despesasLEG57'][0]\n",
+        "if any(file['name'] == f'despesasLEG57_{date.today().year}' for file in file_list):\n",
+        "  fileId2 = [file['id'] for file in file_list if file['name']==f'despesasLEG57_{date.today().year}'][0]\n",
         "  updated2 = drive_service.files().update(fileId=fileId2,\n",
         "                                        body=file_metadata2,\n",
         "                                        media_body=media2).execute()\n",
