--- a/TranspCD.ipynb
+++ b/TranspCD.ipynb
@@ -153,8 +153,7 @@
       "source": [
         "# Requisições das despesas dos deputados em exercício no(s) ano(s) e/ou no(s) mês(es) desejado(s)\n",
         "%%time\n",
-        "dic_dept_desp = {}\n",
-        "for i in range(1,date.today().month): # Define intervalo para requisições mensais\n",
+        "for i in range(max(1, date.today().month-3), date.today().month): # Define intervalo para requisições de dados dos últimos 3 meses do ano corrente\n",
         "  for nid in list_id: # Controla execução parcial das requisições\n",
         "    listA = []\n",
         "    for pg in range(1,100): # Define intervalo para requisições por página no ano corrente\n",
